Update to prepare for code exercise

--- a/CWS.SimpleBank.Data/App.config
+++ b/CWS.SimpleBank.Data/App.config
@@ -10,7 +10,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Interview101Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=cwinterview101.database.windows.net;initial catalog=Interview101;user id=cwreviewer;password=CardWorks@2020;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="Interview101Entities1" connectionString="metadata=res://*/BankData.csdl|res://*/BankData.ssdl|res://*/BankData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=cwinterview101.database.windows.net;initial catalog=Interview101;user id=cwreviewer;password=CardWorks@2020;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Interview101Entities1" connectionString="metadata=res://*/BankData.csdl|res://*/BankData.ssdl|res://*/BankData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=cwinterview101.database.windows.net;initial catalog=Interview101;user id=CardWebCoder;password=Coder@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
