--- a/CWS.SimpleBank/Web.config
+++ b/CWS.SimpleBank/Web.config
@@ -9,7 +9,7 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
 	<connectionStrings>
-		<add name="Interview101Entities1" connectionString="metadata=res://*/BankData.csdl|res://*/BankData.ssdl|res://*/BankData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=cwinterview101.database.windows.net;initial catalog=Interview101;user id=cwreviewer;password=CardWorks@2020;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="Interview101Entities1" connectionString="metadata=res://*/BankData.csdl|res://*/BankData.ssdl|res://*/BankData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=cwinterview101.database.windows.net;initial catalog=Interview101;user id=CardWebCoder;password=Coder@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
