--- a/CWS.SimpleBank/CWS.SimpleBank.csproj
+++ b/CWS.SimpleBank/CWS.SimpleBank.csproj
@@ -141,13 +141,17 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="BankService.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\CreditCard.cs" />
-    <Compile Include="Models\Loan.cs" />
+    <Compile Include="Models\AccountProcessor.cs" />
+    <Compile Include="Models\CreditCardProcessor.cs" />
+    <Compile Include="Models\DepositProcessor.cs" />
+    <Compile Include="Models\IAccountProcessor.cs" />
+    <Compile Include="Models\LoanProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -188,6 +192,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Customer\Customers.cshtml" />
     <Content Include="Views\Customer\Accounts.cshtml" />
+    <Content Include="Views\Account\Calculator.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
